Fixed spacing for the bet area.

--- a/css/styles.css
+++ b/css/styles.css
@@ -507,6 +507,13 @@ button:active{
 	margin-left: -160px;
 }
 
+#dropArea{
+	width: 100%;
+	height: 80%;
+	padding: 0 20px;
+	box-sizing: border-box;
+}
+
 #cup-holder{
 	position: absolute;
 	left: 400px;
